主要修复：研究生部分页面获取时Referer缺少导致无法获取相关的信息；次要修改：修改部分异常类的抛出，jdk最低版本降至1.8